Update openapi sdk based on new swagger.json
